fix: [PA-85] fix the issue of the scrollbar appearing below the header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,15 @@ html {
 body {
   height: 100%;
   min-height: 100vh;
+  color: var(--foreground);
+  background: var(--background);
+  font-family: 'NanumGothic', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  
+  /* body의 스크롤이 헤더 아래로 가는 것을 막기 위해 추가 */
+  position: relative; 
+  z-index: 0;
 }
 
 body, 
@@ -40,15 +49,6 @@ main {
   width: 100%;
   min-height: calc(100vh - var(--headerHeight) - var(--footerHeight));
   margin-top: var(--headerHeight);
-  z-index: 10;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: 'NanumGothic', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 input:focus {
